BOLT-23085 Trending: Fixed profile image sometimes stretching

--- a/app/styles/v2/Vivanuncios/partials/components/adTile/_adTile.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/adTile/_adTile.scss
@@ -72,6 +72,7 @@ $panelCornerBorderRadius: 7px;
 
 		img.profile-image {
 			background-color: white;
+			object-fit: cover;
 			width: 100%;
 			height: 100%;
 			border-radius: 50%;
